@@ -41,7 +41,7 @@ jobs:
           - [macos-12, macosx_*, x86_64]
           - [windows-2019, win_amd64, AMD64]
           - [macos-14, macosx_*, arm64]
-        python: ["cp310", "cp311", "cp312"]
+        python: ["cp310", "cp311", "cp312", "cp313"]
     defaults:
       run:
         working-directory: ./package
@@ -243,7 +243,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
         type: ["FULL", "MIN"]
         exclude:
           # Multiple deps don't like windows
