@@ -41,8 +41,6 @@ jobs:
         os-type: "ubuntu"
 
     - uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
 
     # minimally install nightly wheels & core deps
     - name: nightly_wheels
@@ -197,7 +195,7 @@ jobs:
     strategy:
         fail-fast: false
         matrix:
-          python-version: ["3.10", "3.11", "3.12"]
+          python-version: ["3.10", "3.11", "3.12", "3.13"]
     steps:
     - uses: actions/checkout@v4
 
