@@ -47,7 +47,7 @@ jobs:
           PYTHON_VERSION: '3.12'
           PYTHON_ARCH: 'x64'
           BUILD_TYPE: 'wheel'
-          NUMPY_MIN: '1.26.0'
+          NUMPY_MIN: '2.1.0'
           imageName: 'ubuntu-latest'
         Linux-Python310-64bit-full-wheel:
           PYTHON_VERSION: '3.10'
