@@ -32,9 +32,9 @@ class TestProgressBar(object):
         for i in ProgressBar(list(range(10))):
             pass
         out, err = capsys.readouterr()
-        expected = u'100%|██████████| 10/10 [00:00<00:00, 583.67it/s]'
+        expected = u'100%|██████████'
         actual = err.strip().split('\r')[-1]
-        assert actual[:24] == expected[:24]
+        assert actual[:15] == expected
 
     def test_disable(self, capsys):
         for i in ProgressBar(list(range(10)), disable=True):
